# minecraft-weekend

./: .gitignore  CMakeLists.txt  opengl.sh  shell.nix  webgl.sh
res/shaders/: basic2d.fs  basic2d.vs  basic_color.fs  basic_color.vs  basic_texture.fs  basic_texture.vs  chunk.fs  chunk.vs  sky.fs  sky.vs
src/: main.c
src/gfx/: renderer.c  window.c
src/util/: cfg.c  cfg.h  sort.h
src/world/: world.h
